@@ -1,4 +1,7 @@
-﻿namespace Amica.Models
+﻿using Amica.Models.Resources;
+using System.ComponentModel.DataAnnotations;
+
+namespace Amica.Models
 {
     /// <summary>
     /// Fee information.
@@ -17,6 +20,7 @@
         /// <value>
         /// The name.
         /// </value>
+        [Display(Name = nameof(Properties.Name), ResourceType =typeof(Properties))]
         public string Name
         {
             set { SetProperty(ref _name, value); }
@@ -29,6 +33,7 @@
         /// <value>
         /// The amount.
         /// </value>
+        [Display(Name = nameof(Properties.Amount), ResourceType =typeof(Properties))]
         public decimal Amount
         {
             set { SetProperty(ref _amount, value); }
@@ -41,6 +46,7 @@
         /// <value>
         /// The VAT.
         /// </value>
+        [Display(Name = nameof(Properties.Vat), ResourceType =typeof(Properties))]
         public PropertyModels.Vat Vat
         {
             set { SetProperty(ref _vat, value); }
